--- a/SeminarAusarbeitung/ref.bib
+++ b/SeminarAusarbeitung/ref.bib
@@ -9,3 +9,26 @@
   volume    = {16},
   year      = {2015},
 }
+@article{DBLP:journals/jcss/AtseriasD08,
+  author    = {Albert Atserias and
+               V{\'{\i}}ctor Dalmau},
+  title     = {A combinatorial characterization of resolution width},
+  journal   = {J. Comput. Syst. Sci.},
+  volume    = {74},
+  number    = {3},
+  pages     = {323--334},
+  year      = {2008},
+}
+@article{DBLP:journals/tcs/Haken85,
+  author    = {Armin Haken},
+  title     = {The Intractability of Resolution},
+  journal   = {Theor. Comput. Sci.},
+  volume    = {39},
+  pages     = {297--308},
+  year      = {1985},
+  url       = {https://doi.org/10.1016/0304-3975(85)90144-6},
+  doi       = {10.1016/0304-3975(85)90144-6},
+  timestamp = {Wed, 14 Nov 2018 10:33:34 +0100},
+  biburl    = {https://dblp.org/rec/journals/tcs/Haken85.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
